Wrap footer to fix top navbar scaling on smaller screens

--- a/_includes/css/vespa.css
+++ b/_includes/css/vespa.css
@@ -263,6 +263,7 @@ footer .footer-row {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
+    flex-wrap: wrap;
 }
 
 
